fix landing chevron mobile position

--- a/src/App.css
+++ b/src/App.css
@@ -770,8 +770,10 @@ a {
   .Landing-container {
     width: 20px;
     height: 20px;
-    margin-left: 100px;
-    margin-bottom: 20px;
+    /* margin-left: 100px; */
+    margin: 0px auto 0px auto;
+    align-self: center;
+    /* margin-bottom: 20px; */
   }
   .chevron {
     /* position: absolute; */
